# par-bin-options

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  binomial-orig.h  binomial.cpp  binomial.h  gettime.h  main.cpp  main.h.in  original-binomial.cpp  original-binomial.h  perf-test-avgs.cpp  perf-test.cpp  qlibtest.cpp
src/test/: orig-test.cpp  test-stencil.cpp  test.cpp
